# robotics-project

./: README.md
moveit_ws/.catkin_tools/profiles/default/: devel_collisions.txt
moveit_ws/devel/: .catkin  .rosinstall  local_setup.sh
moveit_ws/devel/include/movit_robot_arm_sim/: angles.h
moveit_ws/devel/lib/pkgconfig/: movit_robot_arm_sim.pc  robot_arm_urdf.pc
moveit_ws/devel/lib/python3/dist-packages/movit_robot_arm_sim/msg/: __init__.py  _angles.py
moveit_ws/devel/share/movit_robot_arm_sim/cmake/: movit_robot_arm_sim-msg-paths.cmake  movit_robot_arm_simConfig.cmake
moveit_ws/devel/share/robot_arm_urdf/cmake/: robot_arm_urdfConfig.cmake
moveit_ws/devel/share/roseus/ros/movit_robot_arm_sim/: manifest.l
moveit_ws/src/movit_robot_arm_sim/: .setup_assistant  CMakeLists.txt  package.xml
moveit_ws/src/movit_robot_arm_sim/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  robot_arm_urdf.srdf  ros_controllers.yaml
moveit_ws/src/movit_robot_arm_sim/launch/: full_robot_arm_sim.launch  gazebo.launch  robot_arm_urdf_moveit_controller_manager.launch.xml  ros_controllers.launch
moveit_ws/src/movit_robot_arm_sim/scripts/: joint_states_subscriber.py  node_set_predefined_pose.py
moveit_ws/src/robot_arm_urdf/: CMakeLists.txt
moveit_ws/src/robot_arm_urdf/config/: joint_trajectory_controller.yaml
moveit_ws/src/robot_arm_urdf/launch/: arm_urdf.launch
moveit_ws/src/robot_arm_urdf/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL
moveit_ws/src/robot_arm_urdf/urdf/: robot_arm_urdf.csv  robot_arm_urdf.urdf
(+7 files in other folders)
